# python-project-52

./: .gitignore  README.md  db.sqlite3  pyproject.toml
locale/ru_RU/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/migrations/: 0001_initial.py  0002_task_tasklabelrelation.py
task_manager/statuses/: urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/task_manager/: settings.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  delete_label.html  delete_status.html  delete_task.html  delete_user.html  form.html  index.html  list_label.html  list_task.html  list_user.html  navbar.html  statuslist.html  task.html
task_manager/users/: forms.py  urls.py  views.py
